ci: Update checks workflow to use code scanning alerts

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -22,19 +22,47 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
-    - name: Install
-      run: gem install bundler -v 2.1.4
+    - name: Set up ruby
+      uses: actions/setup-ruby@v1
+      with:
+        ruby-version: '2.6'
+
+    - name: Install dependencies
+      run: |
+        bundle install
 
     - name: Test
       run: |
-        bundle install
         bundle exec rake
-  quality:
-    name: Run quality checks
+
+  rubocop:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+
     steps:
-    - name: Checkout
+    - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Rubocop checks
-      uses: gimenete/rubocop-action@1.0
+    - name: Set up Ruby
+      uses: ruby/setup-ruby@v1
+      with:
+        ruby-version: 2.6
+
+    - name: Install Code Scanning integration
+      run: bundle add code-scanning-rubocop --version 0.3.0 --skip-install
+
+    - name: Install dependencies
+      run: bundle install
+
+    - name: Rubocop run
+      run: |
+        bash -c "
+          bundle exec rubocop --require code_scanning --format CodeScanning::SarifFormatter -o rubocop.sarif
+          [[ $? -ne 2 ]]
+        "
+
+    - name: Upload Sarif output
+      uses: github/codeql-action/upload-sarif@v1
+      with:
+        sarif_file: rubocop.sarif
