ci: Add name to Rubocop job

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -36,6 +36,7 @@ jobs:
         bundle exec rake
 
   rubocop:
+    name: Rubocop
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
