--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -16,6 +16,10 @@ on:
 
 jobs:
   test:
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest]
+        ruby: [2.7, 3.1, 3.2]
     name: Run automated tests
     runs-on: ubuntu-latest
     steps:
@@ -23,9 +27,10 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set up ruby
-      uses: actions/setup-ruby@v1
+      uses: ruby/setup-ruby@v1
       with:
-        ruby-version: 2.6
+        ruby-version: ${{ matrix.ruby}}
+        bundler-cache: true
 
     - name: Install dependencies
       run: |
@@ -45,10 +50,11 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Set up Ruby
+    - name: Set up ruby
       uses: ruby/setup-ruby@v1
       with:
-        ruby-version: 2.6
+        ruby-version: 3.2
+        bundler-cache: true
 
     - name: Install Code Scanning integration
       run: bundle add code-scanning-rubocop --version 0.3.0 --skip-install
